@@ -1,23 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST yubico-pam-2.20.tar.gz 71152 SHA256 8fc94e7fd6494975eb805797be329cdfaa255b634bf91810bef23f9c8fc0b185 SHA512 336f6fd08ed6cad082e16528baaf66cda4fcfbed1311d514760934f1aa22febc7e1e929e0905d05bbeb453f04388b25cbbdca6f07a4afb71a05e705634c1ea64 WHIRLPOOL b69b67c94c43cb78fa04c9c70fcda6d3c1ccd17c838241f67d21895546141cf580060d54c300751631970aa59a8b1f43afb51a0170a5def9a69874f8b485dd02
 DIST yubico-pam-2.24.tar.gz 72865 SHA256 4e21056f35eee0795918ea394173ab8d4f52629498baf38e86ece5b7a8306d55 SHA512 76aee8afeae2abcf6438c761c2ecab75300598ecfea8abf0fde854500f22a26f78d98a8b7bb25078acf12c5d453976ffb8685ae33c6d63ffa289e3c058a283d7 WHIRLPOOL 3894d7b89f41156dc8f19c30a01f3996fc83aa2b0b6ec49093bed7c8381c1fae54d798a84425d44b7f48f8fe76331b34a5f84addc3b79a87a8bae2dce05b1f00
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlhzjUlfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlhzjXtfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn1rSw//Qt29d1Ny977CR52wnvXNcqRdqVdlIHmSMA2GXx7Hu4JU88KnO6yJLP5D
-f+foww6LIRv3VVxIGNL192en/hMldnJQGkTbGpNVKuRfdEiA3MxVPIKOVgduwJuv
-JMP2UQLuIknzRdq7cN3voyPFEX384Yq/Oa32tqTc4uFiLRFfVnYH+0ewHrwLAJNm
-LeMSRqtiLLeGIZ9ysX17hu32FoCarjJ+WBarsO5E//1NvEcb9RaCBGeayDwkYWJE
-HKjMNs9NoqdxBb3JyqoN84DCONpDXVMmPnaVGf5Ol4Y2P5pIN7GWI0qM59D0YPDn
-2D8ZIuNTayEcj3el5X2U8azsELf8QmJkRJ8z7xA84iMMQTB9ZGfBQzl+aJliSOws
-SHa/rDtq0/DNyOC/c+ntToOBTv4GoLmzZ5wWwyyhImGoGkiNAEebodTyqi6iZuEH
-m8tOx2PNKgRYhCmWRcQalkRtiellHVXPq7xrQAYv/1nI+2Et1G3DTQKnmx/IP86d
-rQNIsegwLPczdh8thBdfLhUMME+9gutYCJYL4LLfQNjIZAiTlTU1POcJVPiczv/l
-tVvQPwXWHZHg4IxX5915WkDPbBF1PvFA9M+Z2JtXFHgdFyeCUOAaiY76V4ltp1NV
-uTYsgDh24qmufGUzw+ctU8YbUi9GhPRv9QQ+Z0ps4ZhhJsUpgnU=
-=c1yk
+Hn3S4xAApulA0kbDvk8r78KQad0PGNnAJuawTQub4pJEFXMUWS5DvFVx/0kXmZQr
+apuQ/RCV9LYmfsNWUk9puxoUv5fy7e8xe6v7LlR6j+3W4pj61YtrRGuXo5NneX8l
+mCN8ijSS7AABbcHqsFCMxThOrCfaFcPt90GJq7lM5iyBBq0QX72qQgyyoR8Qgp+X
+bF8fnm0o3zNRl/xIN/XZmYDB5rv7BDLgbo4yM7Sr//7puYDImN+nlQbiVU/r0Pw9
+fVv2lPmMYMLFpBgsH1vdxT+FToaaq58HeQSFm8AjuqXOyEkfUgkonJxB5tlqOnU4
+Tl9Hd4s5dXx4aAKnElKQJXzOgscqo3MY9VaoFD3zv0CpTjqsQ6n2ekNAV03lWRb3
+dC7dRGAX6EvfEUgvn4K1YHYH67bLYikM/DJSsC722Efxgp2rz3wWWXDdnvRx+tqu
+2iSNaIkEMlRmZUvXPjMy/+lM5/L4+oCyHyDGv8al9Uq6I/TufB4Ae/EYEHA49us3
+sgRvzxDKDguOtqPSmYDgIyYQhOoeETnn2s96uohd+bux7boftkuPHZrz48x71BPQ
+OySWMlG5iFKJcNHSBS2MkMePfHw9jSfZxp7sNGoVpRg9i83BCZU/VGcC4E++MdWA
+yFmdE+GIvhIlIl2oJlWlFY5qh3Rfho6NaaQ+BBIkoTG4TUa01YA=
+=ITKt
 -----END PGP SIGNATURE-----
