@@ -1,3 +1,7 @@
+  09 Jan 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  -yubico-pam-2.20.ebuild:
+  sys-auth/yubico-pam: drop old version
+
 *yubico-pam-2.24 (09 Jan 2017)
 
   09 Jan 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
